# game_of_life_rust

./: Cargo.toml  init.sh
src/: main.rs
